@@ -1,12 +1,6 @@
-DIST xfce4-dict-0.4.1.tar.bz2 334242 RMD160 a7835525815155fe6e8613f373fa9b6b21496e1d SHA1 595db67517f4d93d7e931468fd75f030b1339a0f SHA256 79a81c2abf7e607c222642b27b0b93ef3781c2ce3cfcaeaeca9dcaa398bc4b8a
-DIST xfce4-dict-0.5.0.tar.bz2 364800 RMD160 e40f10aa70661fd73abd2bf29f2391241956a11b SHA1 d71be3d8de001a3e489ffff043e3fd34910b5f39 SHA256 9fc6fdaa248ffc107342e585a21bf1aa07e6d4ee4ae6dd2d8b5f59fde65c027e
-DIST xfce4-dict-0.5.1.tar.bz2 358344 RMD160 ee3b5810c7fe5fd9ffabc1287ae3092ffb11377f SHA1 27f8484ece6f0c97ce95699007a733dad975ea4a SHA256 72f46c6cad45e9284b8f79cc11effd187ae202dafc268befac104522cf77aec3
 DIST xfce4-dict-0.5.2.tar.bz2 358727 RMD160 0f425d6bbdcbaee2770e57353917ced60561c6cb SHA1 2d292cfff1e4381675af72b1dc67f16d67cc6d36 SHA256 f6c885fc121b9de26e023a45804a78c97c0244b6686b0f7d430c05a606a2271a
-DIST xfce4-dict-plugin-0.3.0.tar.gz 411422 RMD160 9073f0f25f08acaeaeafd786a8faa9f3647fcea0 SHA1 39f1b52c79fc94f6b0200f80cbee86a3163e8db8 SHA256 592d2ee64a1123b03ecfd0291998a46c5e2da5076c2135e17207bba6adab11f4
-EBUILD xfce4-dict-0.3.0.ebuild 1008 RMD160 af1423a3954c40e90032ef3cc1dc5bdd8ea64290 SHA1 6b9e20efc6c0b8c3c2e9856a85d03ab5dec4ce93 SHA256 624f6a206cc87c96ec3d931eb7089c3cb0709e3e23cd3e9045d185fb5403d125
-EBUILD xfce4-dict-0.4.1.ebuild 1493 RMD160 1e374c8fa096dd36740a44cd5de4081a778b1205 SHA1 9b094b6cef8789f0e6db669513c4dc66326bfe38 SHA256 ada0ccb7f957185f9c0b6d817c46aea284fd287e581bd50cd302c8d883ab268c
-EBUILD xfce4-dict-0.5.0.ebuild 1493 RMD160 382e8af4b6ec96b78871532f432638159789e5aa SHA1 bcf0a027ef90b9ca538c5220bae49ae57d7c1b61 SHA256 91dd327d82c853b58d3f8f88d7d3771baa0ffc2b0f4c08dfb159b472ee876115
-EBUILD xfce4-dict-0.5.1.ebuild 1493 RMD160 77346208814f497151f168f7eb03c0c9038f38b9 SHA1 e15218fc9a9063ac8105f59954a2a287b1707565 SHA256 549ca00b6552a12f1ad1f0602ac02c4464f9f2da86d45e5e349e0933146e0392
+DIST xfce4-dict-0.5.3.tar.bz2 344094 RMD160 d030b205a9007c7023b13497d69f6be165af8999 SHA1 21a2e50d7b51104ffbfb9ea32eb783e541ccd844 SHA256 999b86a807a897ff7737cada770d8bc543b1a1b22baa7e3c37f8408d496cc253
 EBUILD xfce4-dict-0.5.2.ebuild 1493 RMD160 f3749ce37ddcf7262d77b5405018daa327a54630 SHA1 02e7e2e865ec08eabedc54bbfd76c1983abc9b0e SHA256 063d053c126708c4134677eb63ddb55391909924b86349ef09b9fa146d35c689
-MISC ChangeLog 4144 RMD160 288236f146e5887805f13e6916fc44561cddd9a6 SHA1 7e6c02f80190be085bca7b530ee218d94a7cdd4c SHA256 ffdf8fe9f87497d194525abc4c798b70bf2696e48fa5396b295d0ae0b8c17725
+EBUILD xfce4-dict-0.5.3.ebuild 1493 RMD160 5017ab9f53a3f99067c23b6899e3d8631d5fe795 SHA1 aca4bffa0bbb537ea5465c9309012ca9066ee1d4 SHA256 02511356879ef2bbe585ac955db45d1efd1983e00d557b4d51323df25eb1a399
+MISC ChangeLog 4273 RMD160 3ab94d4df5f4c2642e2a77955eb93527d104fc6f SHA1 6b3973ab3faa9e302cd8b0c709efc396bba2451d SHA256 c42feb9c286339e2ab49added98f030ef3c1520ebca2f4c5288c874508f13833
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
